--- a/doc/fr_FR/changelog.asciidoc
+++ b/doc/fr_FR/changelog.asciidoc
@@ -1,3 +1,19 @@
+Version 2.1
+- Ajout des fonds demi-hauteur (HTC Original, HTC Black, HTC White)
+- Correction image sans fond manquante
+- Ajout traduction page configuration
+- Ajout support affichage secondes
+- Ajout adaptation automatique largeur mini du widget
+- Ajout option desactivation animation des secondes
+- Desactivation edition taille de la tuile
+- Ajout parametrage de la taille de l'horloge (via un scale donc le scale jeedom du mode design ne sert a rien)
+- Suppression cron30
+- Correction du probleme de fond transparent qui se desactive au changement de parametres
+- Ajout numero de version dans la configuration
+
+Version 2.0.4
+- Ajout screenshots
+
 Version 2.0
 - Ajout horloge Type 3 HTC Rouge
 - Ajout horloge Type 4 HTC Blanche bleutée
@@ -16,3 +32,6 @@ Version 1.0
 - Création du plugin
 - Ajout horloge Type 1 HTC Blanche
 - Ajout horloge Type 2 HTC Noire
+
+TODO :
+- Voir pour utiliser box-shodow pour les ombres a la place d'images en triple
