--- a/core/i18n/fr_FR.json
+++ b/core/i18n/fr_FR.json
@@ -85,6 +85,7 @@
 		"Configuration": "Configuration",
 		"Accès à la configuration": "Accès à la configuration",
 		"Présentation": "Présentation",
+		"Version": "Version",
 		"Plugin pour créer une horloge de type Flip": "Plugin pour créer une horloge de type Flip",
 		"On peut choisir parmis une liste de type visualisable dans la galerie ci-dessous": "On peut choisir parmis une liste de type visualisable dans la galerie ci-dessous",
 		"Une animation est visualisable au changement de minutes ou d'heure": "Une animation est visualisable au changement de minutes ou d'heure",
