--- a/doc/fr_FR/changelog.asciidoc
+++ b/doc/fr_FR/changelog.asciidoc
@@ -1,3 +1,8 @@
+:imagesdir: ../images
+:icons:
+
+==== Changelog
+
 Version 2.2
 
 - Ajout choix d'options d'animation secondes (Sans, Flip, Clignotement dots)
