--- a/doc/fr_FR/description.asciidoc
+++ b/doc/fr_FR/description.asciidoc
@@ -1,8 +1,15 @@
-=== Présentation du plugin
+:imagesdir: ../images
+:icons:
+
+==== Description du Plugin
 
 Ce plugin sert à créer et afficher une horloge de type Flip.
 
 On peut choisir parmis une liste de type visualisable dans la galerie ci-dessous.
 
 Une animation est visualisable au changement de minutes ou d'heure.
+
+Une petite copie d'écran du rendu du widget du plugin :
+
+image:FlipClock_screenshot1.png[]
 
