--- a/doc/fr_FR/configuration.asciidoc
+++ b/doc/fr_FR/configuration.asciidoc
@@ -1,4 +1,7 @@
-=== Configuration du plugin
+:imagesdir: ../images
+:icons:
+
+==== Configuration du plugin
 
 Après avoir installé le plugin, il vous suffit de l'activer.
 
