--- a/doc/fr_FR/faq.asciidoc
+++ b/doc/fr_FR/faq.asciidoc
@@ -1,4 +1,7 @@
-=== F.A.Q. du plugin
+:imagesdir: ../images
+:icons:
+
+==== F.A.Q. du plugin
 
 Comment avoir le fond transparent sur mon horloge ?
 
