--- a/doc/fr_FR/configuration.asciidoc
+++ b/doc/fr_FR/configuration.asciidoc
@@ -1,11 +1,19 @@
 :imagesdir: ../images
 :icons:
 
-==== Configuration du plugin
+== Configuration du plugin
 
 Après avoir installé le plugin, il vous suffit de l'activer.
+image:FlipClock_screenshot5.png[]
 
-Ce plugin n'a aucune configuration particulière mais peut-être paramètrer avec les options suivantes :
+Ce plugin n'a aucune configuration particulière mais peut-être paramètrer graphiquement et avec certaines options :
+image:FlipClock_screenshot6.png[]
+
+Vous retrouverez ces parametres dans la page du plugin :
+image:FlipClock_screenshot3.png[]
+
+Il suffit de choisir l'equipement voulu ou d'en créer un nouveau pour acceder a son parametrage :
+image:FlipClock_screenshot4.png[]
 
 Paramètres :
 
