--- a/doc/fr_FR/description.asciidoc
+++ b/doc/fr_FR/description.asciidoc
@@ -1,7 +1,7 @@
 :imagesdir: ../images
 :icons:
 
-==== Description du Plugin
+== Description du Plugin
 
 Ce plugin sert à créer et afficher une horloge de type Flip.
 
@@ -10,6 +10,6 @@ On peut choisir parmis une liste de type visualisable dans la galerie ci-dessous
 Une animation est visualisable au changement de minutes ou d'heure.
 
 Une petite copie d'écran du rendu du widget du plugin :
-
 image:FlipClock_screenshot1.png[]
+image:FlipClock_screenshot2.png[]
 
