--- a/doc/fr_FR/faq.asciidoc
+++ b/doc/fr_FR/faq.asciidoc
@@ -1,7 +1,7 @@
 :imagesdir: ../images
 :icons:
 
-==== F.A.Q. du plugin
+== F.A.Q. du plugin
 
 Comment avoir le fond transparent sur mon horloge ?
 
