--- a/doc/fr_FR/changelog.asciidoc
+++ b/doc/fr_FR/changelog.asciidoc
@@ -54,3 +54,6 @@ Version 1.0
 TODO :
 
 - Voir pour utiliser box-shodow pour les ombres a la place d'images en triple
+
+=== Retour
+link:index.asciidoc[]
