--- a/doc/fr_FR/description.asciidoc
+++ b/doc/fr_FR/description.asciidoc
@@ -13,3 +13,6 @@ Une petite copie d'écran du rendu du widget du plugin :
 image:FlipClock_screenshot1.png[]
 image:FlipClock_screenshot2.png[]
 
+=== Retour
+link:index.asciidoc[]
+
