--- a/doc/fr_FR/installation.asciidoc
+++ b/doc/fr_FR/installation.asciidoc
@@ -7,3 +7,5 @@ L'installation se fait comme une installation classique de plugin, aucune dispos
 
 Pensez cependant à bien activer le plugin une fois l'installation terminée.
 
+=== Retour
+link:index.asciidoc[]
