[ROBOT] Action all

--- a/doc/de_DE/configuration.asciidoc
+++ b/doc/de_DE/configuration.asciidoc
@@ -1,7 +1,7 @@
 :imagesdir: ../images
 :icons:
 
-== Configuration du plugin
+== Plugin Konfiguration
 
 Après avoir installé le plugin, il vous suffit de l'activer :
 
