--- a/doc/de_DE/changelog.asciidoc
+++ b/doc/de_DE/changelog.asciidoc
@@ -44,7 +44,7 @@ Version 2.1
 - Ajout parametrage de la taille de l'horloge (via un scale donc le scale jeedom du mode design ne sert a rien)
 - Suppression cron30
 - Correction du probleme de fond transparent qui se desactive au changement de parametres
-- Ajout numero de version dans la configuration
+- Versionsnummer in der Konfiguration hinzugefügt
 - Ajout screenshots
 
 Version 2.0
